# Segundo-Ingenieria-Informatica

./: README.md
AyEDA/Práctica 1/: Observaciones.txt
AyEDA/Práctica 2/: Observaciones.txt
AyEDA/Práctica 2/Pruebas/: Ejemplo basico.cpp  Memoria dinamica matriz.cpp  Rediemnsionar.cpp
AyEDA/Práctica 3/: Observaciones.txt
AyEDA/Práctica 4/: Observaciones.txt
AyEDA/Práctica 4/Tabla_Hash/: Celda.hpp  f_d.hpp  f_e.hpp  main.cpp  makefile  matricula.cpp  matricula.h  tabla_hash.hpp  tabla_hash_ejecutable
AyEDA/Práctica 5/: Observaciones.txt
AyEDA/Práctica 5/Entrga/Modificado/: CMakeLists.txt
AyEDA/Práctica 5/Entrga/Modificado/src/BubbleSort/: BubbleSort.h
AyEDA/Práctica 5/Entrga/Modificado/src/CocktailSort/: CocktailSort.h
AyEDA/Práctica 5/Entrga/Modificado/src/HeapSort/: HeapSort.h
AyEDA/Práctica 5/Entrga/Modificado/src/InsertionSort/: InsertionSort.h
AyEDA/Práctica 5/Entrga/Modificado/src/MergeSort/: MergeSort.h
AyEDA/Práctica 5/Entrga/Modificado/src/QuickSort/: QuickSort.h
AyEDA/Práctica 5/Entrga/Modificado/src/RadixSort/: RadixSort.h
AyEDA/Práctica 5/Entrga/Modificado/src/SelectionSort/: SelectionSort.h
AyEDA/Práctica 5/Entrga/Modificado/src/ShellSort/: ShellSort.h
AyEDA/Práctica 5/Entrga/Modificado/src/SortAlgorithm/: LogarithmSorts.h
AyEDA/Práctica 5/Entrga/Modificado/src/SortMethod/: SortMethod.h
AyEDA/Práctica 5/Entrga/Modificado/src/TimSort/: TimSort.h
AyEDA/Práctica 5/Entrga/Modificado/src/main/: Ordenation_Algorithms.h  main.cc
AyEDA/Práctica 6/: Observaciones.txt
SSOO/: P3.sh  P4.sh  P5.sh  P6.sh  PFB.sh
(+225 files in other folders)
